# EffectiveModernCpp

./: CMakeLists.txt  README.md
Abstract/: 1_Deducing Type.md  2_auto.md  3_Moving_to_Modern_C++.md  4_Smart_Pointers.md  5_Rvalue_References,Move_Semantics,and_Perfect_Forwarding.md  6_Lamda_Expression.md  ApplyingList.md  Introduction.md
test/: CMakeLists.txt
test/1_Deducing_Type/: CMakeLists.txt  Item1.cpp
test/Chapter5/: CMakeLists.txt  Item23.cpp
